k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: app-dev
spec:
  type: ClusterIP
  selector:
    app: microservice
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
